--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_HUB }}
+          password: ${{ secrets.DOCKER_HUB_PASS }}
       -
         name: Build and push
         id: docker_build
