--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,4 +24,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: user/app:latest
+          tags: ${{ secrets.DOCKER_USER }}/sakai-docker:latest
+          
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
